--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -32,7 +32,7 @@
       {% endif %}
       
       {% if project.image %}
-      <img class="project-image" src="{{ site.baseurl }}/assets/images/{{ project.image }}" alt="project image" />
+      <img class="project-image" src="{{ site.baseurl }}/assets/images/{{ project.image }}" alt="project image" style="max-width: 100%; height: auto;"/>
       <!-- - <span class="project-tagline">{{ project.tagline }}</span> -->
       {% endif %}
 
