--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -25,8 +25,8 @@
     {% endif %}
     <div class="publication-authors">{{ publication.authors }}</div>
     <div class="publication-conference">{{ publication.conference }}</div>
-    <li><a href="{{ publication.code }}">{{ "Code" }}</a></li>
-    <li><a href="{{ publication.paper }}">{{ "Paper" }}</a></li>
+    <a href="{{ publication.code }}">{{ "Code" }}</a>
+    <a href="{{ publication.paper }}">{{ "Paper" }}</a>
   </div><!--//item-->
   {% endfor %}
 
