--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -29,9 +29,9 @@
       {% if project.tagline %}
       - <span class="project-tagline">{{ project.tagline }}</span>
       {% endif %}
-      
+      <!-- "max-width: 100%; height: auto;" -->
       {% if project.image %}
-      <img class="project-image" src="{{ site.baseurl }}/assets/images/projects/{{ project.image }}" alt="project image" style="max-width: 100%; height: auto;"/>
+      <img class="project-image" src="{{ site.baseurl }}/assets/images/projects/{{ project.image }}" alt="project image" style="height: 30px; width: auto;"/>
       <!-- - <span class="project-tagline">{{ project.tagline }}</span> -->
       {% endif %}
 
