--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -28,7 +28,7 @@
     <a href="{{ publication.code }}">{{ "Code" }}</a>
     <a href="{{ site.baseurl }}/assets/papers/{{ publication.paper }}">{{ "Paper" }}</a>
     {% if publication.image %}
-      <img class="publication-image" src="{{ site.baseurl }}/assets/images/papers{{ publication.image }}" alt="publication image" style="max-width: 100%; height: auto;"/>
+      <img class="publication-image" src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}" alt="publication image" style="max-width: 100%; height: auto;"/>
     {% endif %}
   </div><!--//item-->
   {% endfor %}
