--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -27,8 +27,9 @@
     <div class="publication-conference">{{ publication.conference }}</div>
     <a href="{{ publication.code }}">{{ "Code" }}</a>
     <a href="{{ site.baseurl }}/assets/papers/{{ publication.paper }}">{{ "Paper" }}</a>
+    <br>
     {% if publication.image %}
-      <img class="publication-image" src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}" alt="publication image" style="max-width: 100%; height: auto;"/>
+      <img class="publication-image" src="{{ site.baseurl }}/assets/images/papers/{{ publication.image }}" alt="publication image" style="height: 100px; width: auto;"/>
     {% endif %}
   </div><!--//item-->
   {% endfor %}
