--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -29,10 +29,9 @@
       {% if project.tagline %}
       - <span class="project-tagline">{{ project.tagline }}</span>
       {% endif %}
-      <!-- "max-width: 100%; height: auto;" -->
       <br>
       {% if project.image %}
-      <img class="project-image" src="{{ site.baseurl }}/assets/images/projects/{{ project.image }}" alt="project image" style="height: 100px; width: auto;"/>
+      <img class="project-image" src="{{ site.baseurl }}/assets/images/projects/{{ project.image }}" alt="project image" style="max-width: 100%; height: 200px; width: auto"/>
       <!-- - <span class="project-tagline">{{ project.tagline }}</span> -->
       {% endif %}
 
